# clear-signing

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: publish-gists.yml
contracts/: .gas-snapshot
contracts/src/: ClearCallRouter.sol  Display.sol  GasMeasurement.sol  IAggregationRouterV6.sol  IUniswapV2Router.sol  OneInchSwapDisplayHash.sol  SwapExactTokensForTokensDisplayHash.sol  swapExactTokenForTokensDisplay.json
contracts/test/: ClearCallRouter.t.sol  GasMeasurement.t.sol
crates/clear-signing/: Cargo.toml
crates/clear-signing-cli/: Cargo.toml
crates/clear-signing-cli/src/: main.rs  provider.rs
crates/clear-signing-format/: Cargo.toml
crates/clear-signing-format/src/: lib.rs
crates/clear-signing/src/: clear_call.rs  display.rs  displays_test.json  error.rs  fields.rs  format.rs  lib.rs  reference.rs  registry.rs  resolver.rs  sol.rs
docs/: EIP-Onchain-Display-Spec.md  EIP-Onchain-Display-Verification.md  EIP-Wallet-SendTransaction.md  architecture-overview.md  architecture.md
examples/1inch/: contractlist.json  displays.json  tokenlist.json  transactions.json
examples/clearcall/: contractlist.json  displays.json  tokenlist.json  transactions.json
examples/erc20/: contractlist.json  displays.json  tokenlist.json  transactions.json
examples/multicall/: contractlist.json  displays.json  tokenlist.json  transactions.json
examples/token/: contractlist.json  displays.json  tokenlist.json  transactions.json
examples/uniswap/: contractlist.json  displays.json  tokenlist.json  transactions.json
schemas/: contractlist.schema.json  display.schema.json  package.json
