[package]
name = "clear-signing-format"
version = "0.1.0"
edition = "2024"

[dependencies]
clear-signing = { path = "../clear-signing" }
alloy-core = { version = "1.5.2", features = ["sol-types", "dyn-abi", "json-abi"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
