[package]
name = "clear-signing-format"
version = "0.1.0"
edition = "2024"

[dependencies]
clear-signing = { path = "../clear-signing" }
alloy-primitives = { version = "1.5.2", default-features = false, features = ["serde"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
