[package]
name = "clear-signing-format"
version = "0.1.0"
edition = "2024"

[features]
default = ["serde"]
serde = ["dep:serde", "alloy-primitives/serde", "clear-signing/serde"]

[dependencies]
clear-signing = { path = "../clear-signing", default-features = false }
alloy-primitives = { version = "1.5.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
