[package]
name = "clear-signing"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-core = { version = "1.5", default-features = false, features = ["sol-types", "serde"] }
alloy-dyn-abi = { version = "1.5", default-features = false }
alloy-json-abi = { version = "1.5", default-features = false }
nom = { version = "8", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
