[package]
name = "clear-signing"
version = "0.1.0"
edition = "2024"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
alloy-primitives = { version = "1.5", default-features = false }
alloy-sol-types = { version = "1.5", default-features = false }
alloy-dyn-abi = { version = "1.5", default-features = false }
winnow = { version = "0.7", default-features = false, features = ["alloc"] }
anyhow = { version = "1.0", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
